--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "web",
+  "name": "@objviz/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@geist-ui/react": "^2.1.5",
+    "@geist-ui/react-icons": "^1.0.1",
+    "axios": "^0.21.1",
+    "d3": "5.5.0",
+    "immer": "^9.0.3",
+    "inter-ui": "^3.19.2",
     "react": "^17.0.2",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
+    "react-hook-form": "^7.9.0",
+    "react-query": "^3.18.1",
     "react-scripts": "4.0.3",
+    "react-split-pane": "^0.1.92",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-d3-graph": "^2.6.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
