--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react-split-pane": "^0.1.92",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "zustand": "^3.5.5"
+    "zustand": "^3.5.5",
+    "@types/react-d3-graph": "^2.6.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,11 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-d3-graph": "^2.6.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
   }
 }
