--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@geist-ui/react": "^2.1.5",
     "@geist-ui/react-icons": "^1.0.1",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-d3-graph": "^2.6.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/seedrandom": "^3.0.1",
     "axios": "^0.21.1",
     "d3": "5.5.0",
     "immer": "^9.0.3",
@@ -17,13 +22,10 @@
     "react-query": "^3.18.1",
     "react-scripts": "4.0.3",
     "react-split-pane": "^0.1.92",
+    "seedrandom": "^3.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "zustand": "^3.5.5",
-    "@types/react-d3-graph": "^2.6.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "zustand": "^3.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
