--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-d3-graph": "^2.6.0",
     "@types/react-dom": "^17.0.0",
     "@types/seedrandom": "^3.0.1",
+    "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "d3": "5.5.0",
     "immer": "^9.0.3",
@@ -23,10 +24,12 @@
     "react-scripts": "4.0.3",
     "react-split-pane": "^0.1.92",
     "seedrandom": "^3.0.5",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "zustand": "^3.5.5"
   },
+  "proxy": "https://67ab908e-d2f5-4275-a790-7038e7392805.mock.pstmn.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
