--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@geist-ui/react": "^2.1.5",
     "@geist-ui/react-icons": "^1.0.1",
-    "@react-hook/resize-observer": "^1.2.2",
-    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-d3-graph": "^2.6.1",
@@ -16,7 +14,6 @@
     "d3": "5.5.0",
     "immer": "^9.0.3",
     "inter-ui": "^3.19.2",
-    "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
@@ -25,6 +22,7 @@
     "react-query": "^3.18.1",
     "react-scripts": "4.0.3",
     "react-split-pane": "^0.1.92",
+    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
