--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "5.5.0",
     "immer": "^9.0.3",
     "inter-ui": "^3.19.2",
+    "pg-connection-string": "^2.5.0",
     "react": "^17.0.2",
     "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
