--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "start:client": "react-scripts start",
-    "start:server": "python backend/api.py",
+    "start:server": "cd backend && python api.py",
     "start": "concurrently \"npm:start:client\" \"npm:start:server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
